deployment-dev-testnet.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${WORKLOAD_NAME}
  labels:
    app: ${WORKLOAD_NAME}
spec:
  replicas: ${REPLICAS}
  template:
    metadata:
      labels:
        app: ${WORKLOAD_NAME}
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - ${WORKLOAD_NAME}
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: ${WORKLOAD_NAME}
#        resources:
#          requests:
#            memory: "${MEMORY_REQUEST}"
#            cpu: "${CPU_REQUEST}"
        image: ${REGISTRY_PATH}
        stdin: true
        tty: true
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=$(DB_INSTANCE)=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
