deployment-psql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: psql
  labels:
    app: psql
spec:
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - name: psql
        image: governmentpaas/psql
        stdin: true
        tty: true
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=$(DB_INSTANCE)=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
