deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${WORKLOAD_NAME}
  labels:
    app: ${WORKLOAD_NAME}
spec:
  template:
    metadata:
      labels:
        app: ${WORKLOAD_NAME}
    spec:
      containers:
      - name: neoscan
        ports:
        - containerPort: 4000
          hostPort: 4000
          protocol: TCP
        image: ${REGISTRY_PATH}
        stdin: true
        tty: true
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=${DB_INSTANCE}=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
