nodeport.yaml
apiVersion: v1
kind: Service
metadata:  
  name: ${WORKLOAD_NAME}
spec:
  selector:    
    app: ${WORKLOAD_NAME}
  type: NodePort
  ports:  
  - name: http
    port: 4000
    nodePort: ${PORT}
    targetPort: 4000
    protocol: TCP
